src/test/deca/context/invalid/ContextAvecObjet/DeclMeth/overrideSigTypeArgs.deca
// Description:
//    Override avec une autre signature (type différent)
//
// Resultats:
//    Erreur contextuelle ligne 18
//    signature incompatible
class A{

    int x;

    int calcul(int y1, int y2, int y3, int y4, int y5, int y6){
        y1*y2*y3*y4*y5*y6;
    }
}

class B extends A{

    int calcul(int y1, int y2, int y3, int y4, int y5, float y6){
        return y6;
    }
}
